# aperture

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
aperture/: config.py  main.py  mcp_server.py  models.py
aperture/delivery/: discord_bot.py
aperture/processor/: summarize.py
aperture/source/: hn.py
aperture/store/: json_store.py
